@@ -224,6 +224,9 @@ customization by writing Python code.</p>
 
       <li>Log messages with variant end-of-line styles.</li>
 
+      <li>Vendor branch declarations that refer to non-existent
+        branches.</li>
+
     </ul>
   </dd>
 
